Added reset password page
